NL-182 Keep getAttribute(null) answering null at every forward depth
ImmutableCollections.MapN.get calls Objects.requireNonNull when size == 0, so the
Map.of() the nested-forward branch returned made getAttribute(null) throw two
forwards deep while every other depth answered null. Collections.emptyMap() is
null-tolerant and matches what the sibling branch already returns.

Claude-Session: https://claude.ai/code/session_01DepCK1v4oSBPUeXX7QjMiR